--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,9 +31,6 @@ body {
     text-align: center;
     font-family: 'Londrina Solid', cursive;
     font-size: 20px;
-    width: 99%;
-    margin-left: auto;
-    margin-right: auto;
     background-color: #42d1b9;
 }
 
@@ -42,83 +39,46 @@ h1 {
     font-family: 'Londrina Sketch', cursive;
 }
 
+#nav {
+    background-color: aliceblue;
+}
+
+#welcome-main {
+    background-color: aliceblue;
+    margin-top: 10rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 4rem;
+    width: 90%;
+}
+
+#welcome-sec {
+    background-color: aliceblue;
+    margin-top: 3rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 1rem;
+    width: 90%;
+}
+
 
 /* header styles */
 
-.top-nav {
-    width: 98%;
-    display: inline;
-    padding: 1rem;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.small-logo {
-    float: left;
-    padding: 1.5rem;
-    width: 10%;
-}
-
-.content {
-    float: right;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
-    list-style: outside none none;
-    width: 40%;
-    letter-spacing: 0.09rem;
-    font-family: 'Londrina Solid', cursive;
-}
-
-.content li {
+nav li {
     display: inline-block;
+    list-style: outside none none;
     padding: 0.3rem;
+}
+
+.container-fluid {
+    text-align: center;
 }
 
 
 /* content styles */
-
-.main-container {
-    padding: 10rem;
-    margin-top: 5rem;
-    border: 2rem;
-    margin-right: auto;
-    margin-left: auto;
-    width: 75%;
-    text-align: center;
-    background-color: aliceblue;
-}
-
-.main-heading {
-    padding: 3rem;
-    background-color: aliceblue
-}
 
 
 /* footer styles */
 
 
 /* mobile styles */
-
-@media only screen and (max-width:1024px) {
-    body {
-        color: blue;
-    }
-}
-
-@media only screen and (max-width:768px) {
-    body {
-        color: red;
-    }
-}
-
-@media only screen and (max-width:480px) {
-    body {
-        color: green;
-    }
-    @media only screen and (max-width:320px) {
-        body {
-            color: yellow;
-        }
-    }
-}
