--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,6 +34,28 @@ body {
     background-color: #42d1b9;
 }
 
+html,
+body {
+    height: 100%;
+}
+
+.page-wrap {
+    min-height: 100%;
+    /* equal to footer height */
+    margin-bottom: -120px;
+}
+
+.page-wrap:after {
+    content: "";
+    display: block;
+}
+
+footer,
+.page-wrap:after {
+    /* .push must be the same height as footer */
+    height: 120px;
+}
+
 p {
     font-size: 14px;
 }
@@ -55,10 +77,6 @@ h3 {
 .my-nav {
     background-color: aliceblue;
     padding: 10px;
-}
-
-.row {
-    min-height: 100%;
 }
 
 .welcome-main {
@@ -153,8 +171,6 @@ h3 {
 footer {
     background-color: aliceblue;
     padding-top: 20px;
-    position: relative;
-    margin-top: 100%;
     height: 120px;
 }
 
